--- a/apple.css
+++ b/apple.css
@@ -3,7 +3,6 @@
   width: 1920px;
   display: flex;
   justify-content: center;
-  /* flex-direction: column; */
   gap: 12px;
 }
 .header {
@@ -13,7 +12,7 @@
   align-items: center;
   justify-content: center;
   gap: 24px;
-  width: 100%;
+  width: 1920px;
   height: 44px;
 }
 
@@ -308,22 +307,36 @@
 .scroll {
   display: flex;
   width: 1920px;
-  height: 668px;
+  height: 1000px;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
-  gap: 10px;
+  gap: 12px;
+  scroll-behavior: smooth;
+}
+.dots {
+  display: flex;
+  gap: 14px;
+}
+.dot {
+  background-color: #000000cc;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
 }
 .img1 {
+  display: flex;
+  align-items: end;
   background-image: url(./lady-in-the-lake.jpg);
   width: 100%;
   height: 100%;
-  object-fit: cover;
   flex-shrink: 0;
   scroll-snap-align: center;
   background-position: center;
   background-size: cover;
 }
 .img2 {
+  display: flex;
+  align-items: end;
   background-image: url(./ursdagzurag1.jpg);
   width: 100%;
   height: 100%;
@@ -334,6 +347,8 @@
   background-size: cover;
 }
 .img3 {
+  display: flex;
+  align-items: end;
   background-image: url(./ursdagzurag2.jpg);
   width: 100%;
   height: 100%;
@@ -344,6 +359,8 @@
   background-size: cover;
 }
 .img4 {
+  display: flex;
+  align-items: end;
   background-image: url(./ursdagzurag3.jpg);
   width: 100%;
   height: 100%;
@@ -354,6 +371,8 @@
   background-size: cover;
 }
 .img5 {
+  display: flex;
+  align-items: end;
   background-image: url(./napoleon.jpg);
   width: 100%;
   height: 100%;
@@ -364,6 +383,8 @@
   background-size: cover;
 }
 .img6 {
+  display: flex;
+  align-items: end;
   background-image: url(./bad-monkey.jpg);
   width: 100%;
   height: 100%;
@@ -374,6 +395,8 @@
   background-size: cover;
 }
 .img7 {
+  display: flex;
+  align-items: end;
   background-image: url(./instigators.jpg);
   width: 100%;
   height: 100%;
@@ -384,16 +407,19 @@
   background-size: cover;
 }
 .img8 {
+  display: flex;
+  align-items: end;
   background-image: url(./k-pop-idols.jpg);
   width: 100%;
   height: 100%;
-  object-fit: cover;
   flex-shrink: 0;
   scroll-snap-align: center;
   background-position: center;
   background-size: cover;
 }
 .img9 {
+  display: flex;
+  align-items: end;
   background-image: url(./season-pass.jpg);
   width: 100%;
   height: 100%;
@@ -404,6 +430,8 @@
   background-size: cover;
 }
 .img10 {
+  display: flex;
+  align-items: end;
   background-image: url(./pachinko.jpg);
   width: 100%;
   height: 100%;
@@ -412,4 +440,24 @@
   scroll-snap-align: center;
   background-position: center;
   background-size: cover;
+}
+.stream {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 58px;
+  margin-left: 70px;
+}
+.streambutton {
+  font-size: 17px;
+  font-weight: 400;
+  border-radius: 999px;
+  width: 133px;
+  height: 44px;
+  border: none;
+}
+.genre {
+  font-size: 20px;
+  font-weight: 400;
+  color: white;
 }
