--- a/storeapple.css
+++ b/storeapple.css
@@ -6,9 +6,7 @@
 
 #layout {
   margin: 0 auto;
-  width: 1920px;
-  display: flex;
-  justify-content: center;
+
   background-color: #f5f5f7;
   gap: 12px;
 }
@@ -18,8 +16,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100vw;
   gap: 24px;
-  width: 1920px;
+
   height: 44px;
 }
 
@@ -43,7 +42,6 @@
 }
 .donate {
   display: flex;
-  width: 1920px;
   height: 52px;
   margin-top: 52px;
   justify-content: center;
@@ -53,12 +51,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 1920px;
-  gap: 12px;
 }
 .solongonheseg {
   background-image: url(./solongo.png);
-  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 75px;
 }
 .thirdheseg {
@@ -80,7 +78,6 @@
   height: 35px;
 }
 .huuhniizuragtaibichig {
-  /* margin-right: 140px; */
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -132,15 +129,14 @@
   font-weight: 700;
   color: #1d1d1f;
 }
-.scrollfirst {
-  margin-left: 140px;
-}
+
 .rainbowtextlatest {
   display: flex;
   gap: 4px;
   font-size: 24px;
   font-weight: 700;
   margin-top: 60px;
+  margin-left: 140px;
 }
 .solongonlatest {
   background-image: linear-gradient(#0090f7, #ba62fc, #f2416b);
@@ -156,14 +152,24 @@
   padding: 31px;
   gap: 9px;
 }
+.scrollfirst {
+  display: flex;
+  gap: 20px;
+  height: 558px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  margin-left: 140px;
+  margin-right: 0px;
+}
 .ip16pro {
   background-image: url(./ip16pro.jpg);
   width: 480px;
   height: 500px;
+  flex-shrink: 0;
   background-size: cover;
   background-position: center;
   border-radius: 18px;
-  margin-top: 24px;
 }
 #appleintelligence {
   display: flex;
@@ -184,4 +190,243 @@
 #ip16une {
   font-size: 18px;
   font-weight: 400;
+}
+.iwatchseries10 {
+  background-image: url(./iwatch10.jpg);
+  width: 480px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.doodbichig1 {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  margin-top: 20px;
+  gap: 9px;
+}
+.ipadmini {
+  background-image: url(./ipadminiursdag.jpg);
+  width: 480px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.macbookpro {
+  background-image: url(./macbookpro.jpg);
+  width: 480px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.ipadpro {
+  background-image: url(./ipadpro.jpeg);
+  width: 480px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+#ipadprobichig {
+  font-size: 26px;
+  font-weight: 700;
+  color: white;
+}
+#ipadproune {
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+}
+.airpods4 {
+  background-image: url(./airpods4.jpeg);
+  width: 480px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+#airpods4une {
+  font-size: 18px;
+  font-weight: 400;
+}
+.scrollsecond {
+  gap: 20px;
+  margin-left: 140px;
+  display: flex;
+  height: 558px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+.customairpod {
+  background-image: url(./customairpods.jpg);
+  width: 400px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 18px;
+}
+.custombichig {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  font-size: 26px;
+  font-weight: 700;
+}
+.airpodsmax {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 315px;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  border-radius: 18px;
+}
+.airpodsmaxzurag {
+  width: 230px;
+  height: 230px;
+}
+.airpodsmaxbichig {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: start;
+  margin-right: 28px;
+}
+.ulaanharbichig {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.ulaanbichig {
+  font-size: 12px;
+  color: #b64400;
+}
+.harbichig {
+  font-size: 18px;
+  font-weight: 700;
+  margin-right: 60px;
+}
+.price {
+  margin-top: 82px;
+  font-size: 14px;
+  font-weight: 400;
+}
+.airpodspro2 {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 315px;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.airpodspro2bichig {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  margin-right: 88px;
+  gap: 32px;
+}
+.rainbowtextpersonal {
+  display: flex;
+  gap: 4px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-top: 60px;
+  margin-left: 140px;
+  margin-bottom: 24px;
+}
+.airpods4 {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 315px;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.airpods4bichig {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 52px;
+}
+.ulaanharbichigairpods4 {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  margin-left: 28px;
+  margin-top: 28px;
+}
+.ulaanbichig4 {
+  font-size: 12px;
+  color: #b64400;
+}
+.harbichig4 {
+  font-size: 18px;
+  font-weight: 700;
+}
+.price4 {
+  margin-top: 52px;
+  font-size: 14px;
+  font-weight: 400;
+  margin-left: 28px;
+}
+.applepencilpro {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 315px;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.applepencilbichig {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  margin-top: 50px;
+  margin-right: 28px;
+}
+.ulaanharbichigpencil {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.ulaanbichigpencil {
+  font-size: 12px;
+  color: #b64400;
+}
+.harbichigpencil {
+  font-size: 18px;
+  font-weight: 700;
 }
