--- a/storeapple.css
+++ b/storeapple.css
@@ -18,7 +18,6 @@
   justify-content: center;
   width: 100vw;
   gap: 24px;
-
   height: 44px;
 }
 
@@ -92,6 +91,10 @@
   color: transparent;
   background-clip: text;
 }
+.solongonbichignuud {
+  display: flex;
+  gap: 10px;
+}
 .niilsenbichig {
   display: flex;
   column-gap: 32px;
@@ -161,7 +164,6 @@
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   margin-left: 140px;
-  margin-right: 0px;
 }
 .ip16pro {
   background-image: url(./ip16pro.jpg);
@@ -205,9 +207,19 @@
 .doodbichig1 {
   display: flex;
   flex-direction: column;
-  padding: 30px;
-  margin-top: 20px;
+  padding: 30px 0px 0px 30px;
   gap: 9px;
+}
+.uneteibichig {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+}
+.uneteibichigiwatch10 {
+  display: flex;
+  flex-direction: column;
+  padding: 54px 0px 0px 30px;
+  row-gap: 12px;
 }
 .ipadmini {
   background-image: url(./ipadminiursdag.jpg);
@@ -249,8 +261,8 @@
   font-weight: 400;
   color: white;
 }
-.airpods4 {
-  background-image: url(./airpods4.jpeg);
+.airpods4tom {
+  background-image: url(./airpod4tom.jpeg);
   width: 480px;
   height: 500px;
   background-size: cover;
@@ -262,6 +274,14 @@
 #airpods4une {
   font-size: 18px;
   font-weight: 400;
+}
+.rainbowtextpersonal {
+  display: flex;
+  gap: 4px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-left: 140px;
+  margin-bottom: 24px;
 }
 .scrollsecond {
   gap: 20px;
@@ -285,154 +305,117 @@
 .custombichig {
   display: flex;
   flex-direction: column;
-  margin-top: 53px;
-  margin-left: 30px;
+  padding: 53px 0px 0px 30px;
   font-size: 26px;
   font-weight: 700;
 }
 .airpodsmax {
+  width: 313px;
+  height: 500px;
   display: flex;
   flex-direction: column;
+  border-radius: 18px;
   background-color: white;
-  width: 315px;
-  height: 500px;
   align-items: center;
-  justify-content: center;
   flex-shrink: 0;
   scroll-snap-align: center;
-  border-radius: 18px;
+  background-size: cover;
+  background-position: center;
 }
+.airpodsmaxniilsen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 71px;
+}
+
 .airpodsmaxzurag {
+  background-image: url(./airpodsmax.jpg);
   width: 230px;
   height: 230px;
+  background-size: cover;
+  background-position: center;
+}
+.airpodsmaxlist {
+  background-image: url(./List\ -\ AirPods\ Max\ -\ PurpleAvailable\ colors.png);
+  width: 253px;
+  height: 58px;
 }
 .airpodsmaxbichig {
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  align-items: start;
-  margin-right: 28px;
-}
-.ulaanharbichig {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-.ulaanbichig {
-  font-size: 12px;
-  color: #b64400;
-}
-.harbichig {
-  font-size: 18px;
-  font-weight: 700;
-  margin-right: 60px;
-}
-.price {
-  margin-top: 82px;
-  font-size: 14px;
-  font-weight: 400;
+  row-gap: 6px;
 }
 .airpodspro2 {
+  width: 313px;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  width: 315px;
-  height: 500px;
-  align-items: center;
-  justify-content: center;
   border-radius: 18px;
+  background-color: white;
+  align-items: center;
   flex-shrink: 0;
   scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+  row-gap: 58px;
+  padding-top: 71px;
 }
-.airpodspro2bichig {
+.airpodspro2zurag {
+  background-image: url(./airpodspro2.jpg);
+  width: 230px;
+  height: 230px;
+  background-size: cover;
+  background-position: center;
+}
+.airpodsmaxbichig {
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  margin-right: 88px;
-  gap: 32px;
-}
-.rainbowtextpersonal {
-  display: flex;
-  gap: 4px;
-  font-size: 24px;
-  font-weight: 700;
-  margin-top: 60px;
-  margin-left: 140px;
-  margin-bottom: 24px;
+  row-gap: 6px;
 }
 .airpods4 {
+  width: 313px;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  width: 315px;
-  height: 500px;
-  align-items: center;
-  justify-content: center;
   border-radius: 18px;
+  background-color: white;
+  align-items: center;
   flex-shrink: 0;
   scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+  row-gap: 58px;
+  padding-top: 71px;
 }
-.airpods4bichig {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 52px;
-}
-.ulaanharbichigairpods4 {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  margin-left: 28px;
-  margin-top: 28px;
-}
-.ulaanbichig4 {
-  font-size: 12px;
-  color: #b64400;
-}
-.harbichig4 {
-  font-size: 18px;
-  font-weight: 700;
-}
-.price4 {
-  margin-top: 52px;
-  font-size: 14px;
-  font-weight: 400;
-  margin-left: 28px;
+.airpods4zurag {
+  background-image: url(./airpods4jijigscroll.jpg);
+  width: 230px;
+  height: 230px;
+  background-size: cover;
+  background-position: center;
 }
 .applepencilpro {
+  width: 313px;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  width: 315px;
-  height: 500px;
-  align-items: center;
-  justify-content: center;
   border-radius: 18px;
+  background-color: white;
+  align-items: center;
   flex-shrink: 0;
   scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+  row-gap: 58px;
+  padding-top: 71px;
 }
-.applepencilbichig {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  margin-top: 50px;
-  margin-right: 28px;
-}
-.ulaanharbichigpencil {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-.ulaanbichigpencil {
-  font-size: 12px;
-  color: #b64400;
-}
-.harbichigpencil {
-  font-size: 18px;
-  font-weight: 700;
+.applepencilprozurag {
+  background-image: url(./applepencilpro.jpg);
+  width: 230px;
+  height: 230px;
+  background-size: cover;
+  background-position: center;
 }
 .scrollthird {
   gap: 20px;
@@ -444,22 +427,26 @@
   scroll-behavior: smooth;
 }
 .surprise {
+  display: flex;
   background-image: url(./surprise.jpg);
   width: 400px;
   height: 500px;
-  background-size: cover;
-  background-position: center;
   border-radius: 18px;
   flex-shrink: 0;
   scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
 }
+
 .surprisebichig {
   display: flex;
   flex-direction: column;
-  margin-top: 54px;
-  margin-left: 30px;
   font-size: 26px;
   font-weight: 700;
+  height: 61px;
+}
+.niilsensurprisebichig {
+  padding: 54px 0 0 30px;
 }
 .sharcase {
   width: 313px;
@@ -468,10 +455,17 @@
   flex-direction: column;
   border-radius: 18px;
   background-color: white;
+  align-items: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
 }
 .sharcaseniilsen {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding-top: 71px;
 }
 .sharcasezurag {
   background-image: url(./shar\ case.jpg);
@@ -479,12 +473,612 @@
   height: 230px;
   background-size: cover;
   background-position: center;
-  margin-top: 71px;
-  margin-left: 41.5px;
 }
 .sharcaselist {
   background-image: url(./List\ -\ iPhone\ 16\ Silicone\ Case\ with\ MagSafe\ –\ Star\ FruitAvailable\ colors.png);
   width: 253px;
   height: 58px;
-  margin-left: 30px;
+}
+.new {
+  font-size: 12px;
+  font-weight: 700;
+  color: #b64400;
+}
+.blacktext {
+  font-size: 18px;
+  font-weight: 700;
+  color: #1d1d1f;
+}
+.buhbichig {
+  width: 257px;
+  height: 109px;
+  row-gap: 35px;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.homepod {
+  width: 313px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 18px;
+  background-color: white;
+  align-items: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+}
+.homepodniilsen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 71px;
+}
+.homepodzurag {
+  background-image: url(./homepod\ .mini.jpg);
+  width: 230px;
+  height: 230px;
+  background-size: cover;
+  background-position: center;
+}
+.homepodlist {
+  background-image: url(./List\ -\ HomePod\ mini\ -\ WhiteAvailable\ colors.png);
+  width: 253px;
+  height: 58px;
+}
+.homepodbuhbichig {
+  width: 257px;
+  height: 109px;
+  gap: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.homepodblacktext {
+  font-size: 18px;
+  font-weight: 700;
+  color: #1d1d1f;
+  margin-top: 12px;
+}
+.smartfolio {
+  width: 313px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 18px;
+  background-color: white;
+  align-items: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+}
+.smartfolioniilsen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 71px;
+}
+.smartfoliozurag {
+  background-image: url(./smart\ folio.jpg);
+  width: 230px;
+  height: 230px;
+  background-size: cover;
+  background-position: center;
+}
+.smartfoliolist {
+  background-image: url(./smartfoliolist.png);
+  width: 253px;
+  height: 58px;
+}
+.smartfoliobuhbichig {
+  width: 257px;
+  height: 109px;
+  gap: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.smartfolioblacktext {
+  font-size: 18px;
+  font-weight: 700;
+  color: #1d1d1f;
+  margin-top: 12px;
+}
+.beatssolo4 {
+  width: 313px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 18px;
+  background-color: white;
+  align-items: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+}
+.beatssolo4zurag {
+  background-image: url(./beatssolo4.jpg);
+  width: 230px;
+  height: 230px;
+  background-size: cover;
+  background-position: center;
+}
+.beatssolo4list {
+  background-image: url(./List\ -\ Beats\ Solo\ 4\ —\ On-Ear\ Wireless\ Headphones\ –\ Slate\ BlueAvailable\ colors.png);
+  width: 253px;
+  height: 58px;
+}
+.new {
+  font-size: 12px;
+  font-weight: 700;
+  color: #b64400;
+}
+.blacktext {
+  font-size: 18px;
+  font-weight: 700;
+  color: #1d1d1f;
+}
+.beatssolo4buhbichig {
+  width: 257px;
+  height: 109px;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.scrollfourth {
+  gap: 20px;
+  margin-left: 140px;
+  display: flex;
+  height: 558px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+.getgifts {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  background-image: url(./getgifts.jpg);
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.getbichig {
+  width: 305px;
+  height: 130px;
+  padding: 50px 0px 0px 30px;
+  font-size: 26px;
+  font-weight: 700;
+}
+.customizepay {
+  width: 313px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+}
+.customize {
+  width: 100%;
+  height: 240px;
+  border-radius: 18px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.customizebichig {
+  font-size: 22px;
+  font-weight: 700;
+}
+.pay {
+  width: 100%;
+  height: 240px;
+  border-radius: 18px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.paybichig {
+  font-size: 22px;
+  font-weight: 700;
+}
+.freemake {
+  width: 313px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+  background-size: cover;
+  background-position: center;
+}
+.free {
+  width: 100%;
+  height: 240px;
+  border-radius: 18px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.freebichig {
+  font-size: 22px;
+  font-weight: 700;
+}
+.make {
+  width: 100%;
+  height: 240px;
+  border-radius: 18px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.makebichig {
+  font-size: 22px;
+  font-weight: 700;
+}
+.appletradein {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(./appletradein.jpg);
+  background-size: cover;
+  background-position: center;
+  align-items: start;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.jijigtradein {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 700;
+}
+.tradeinbichig {
+  font-size: 25px;
+  font-weight: 700;
+}
+.niilsentradein {
+  gap: 9px;
+  padding: 31px 0px 0px 30px;
+  display: flex;
+  flex-direction: column;
+}
+.applespecial {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(./applespecial.jpg);
+  background-size: cover;
+  background-position: center;
+  align-items: start;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.niilsenapplespecial {
+  gap: 9px;
+  padding: 31px 0px 0px 30px;
+  display: flex;
+  flex-direction: column;
+}
+.jijigapplespecial {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 700;
+}
+.applespecialbichig {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.scrollfifth {
+  gap: 20px;
+  margin-left: 140px;
+  display: flex;
+  height: 558px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+.applemusic {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(./applemusic.jpg);
+  background-size: cover;
+  background-position: center;
+  align-items: start;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.applemusicbichig {
+  font-size: 26px;
+  font-weight: 700;
+}
+.niilsenapplemusic {
+  gap: 9px;
+  padding: 32px 0px 0px 30px;
+  display: flex;
+  flex-direction: column;
+}
+.buhapplemusicbichig {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.jijigapplemusic {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 700;
+}
+.appletv {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(./appletv.png);
+  background-size: cover;
+  background-position: center;
+  align-items: start;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.niilsenappletv {
+  gap: 9px;
+  padding: 32px 0px 0px 30px;
+  display: flex;
+  flex-direction: column;
+}
+.jijigappletv {
+  color: #f5f5f7;
+  font-size: 12px;
+  font-weight: 700;
+}
+.appletvbichig {
+  font-size: 26px;
+  font-weight: 700;
+  color: #ffffff;
+}
+.sixservices {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(./appleservice.jpg);
+  background-size: cover;
+  background-position: center;
+  align-items: start;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.sixservicebichig {
+  color: #1d1d1f;
+  font-size: 26px;
+  font-weight: 700;
+  padding: 52px 8px 0px 30px;
+}
+.appleintelligence {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(./appleintelligence.jpg);
+  background-size: cover;
+  background-position: center;
+  align-items: start;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.niilsenappleintelligence {
+  gap: 9px;
+  padding: 31px 0px 0px 30px;
+  display: flex;
+  flex-direction: column;
+}
+.jijigappleintelligence {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 700;
+}
+.appleintelligencebichig {
+  font-size: 26px;
+  font-weight: 700;
+  color: #1d1d1f;
+}
+.scrolllast {
+  gap: 20px;
+  margin-left: 140px;
+  display: flex;
+  height: 558px;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+.carrierdeals {
+  width: 400px;
+  height: 500px;
+  border-radius: 18px;
+  background-color: #ffffff;
+  background-image: url(./carrierdeals.jpg);
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.niilsencarrierbichig {
+  display: flex;
+  flex-direction: column;
+  padding: 31px 0px 0px 30px;
+  gap: 8px;
+}
+.saaralbichig {
+  color: #6e6e73;
+  font-size: 12px;
+  font-weight: 700;
+}
+.todbichig {
+  font-size: 26px;
+  font-weight: 700;
+  color: #1d1d1f;
+}
+.budegbichig {
+  font-size: 17px;
+  color: #1d1d1f;
+  font-weight: 400;
+}
+.niilseneducationbichig {
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0px 0px 30px;
+  gap: 9px;
+}
+.education {
+  width: 400px;
+  height: 500px;
+  border-radius: 18px;
+  background-color: #ffffff;
+  background-image: url(./education.jpg);
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.certified {
+  width: 400px;
+  height: 500px;
+  border-radius: 18px;
+  background-color: #ffffff;
+  background-image: url(./certified.jpg);
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.niilsencertifiedbichig {
+  display: flex;
+  flex-direction: column;
+  padding: 31px 0px 0px 30px;
+  row-gap: 7px;
+}
+.business {
+  width: 400px;
+  height: 500px;
+  border-radius: 18px;
+  background-color: #ffffff;
+  background-image: url(./business.jpg);
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.businesstodbichig {
+  font-size: 26px;
+  font-weight: 700;
+  color: #ffffff;
+}
+.niilsenbusinessbichig {
+  display: flex;
+  flex-direction: column;
+  padding: 31px 0px 0px 30px;
+  row-gap: 8px;
+}
+.government {
+  width: 400px;
+  height: 500px;
+  border-radius: 18px;
+  background-color: #ffffff;
+  background-image: url(./government.jpg);
+  background-size: cover;
+  background-position: center;
+  flex-shrink: 0;
+  scroll-snap-align: center;
+}
+.niilsengovernmentbichig {
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0px 0px 30px;
+  row-gap: 8px;
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 140px;
+  row-gap: 24px;
+  width: 100%;
+  height: 196px;
+}
+.quicklinks {
+  font-size: 26px;
+  font-weight: 700;
+}
+.buttons {
+  display: flex;
+  gap: 12px;
+}
+.order {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 125px;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 999px;
+}
+.vector {
+  width: 8px;
+  height: 8px;
+}
+.shoppinghelp {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 125px;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 999px;
+}
+.returns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 125px;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 999px;
+}
+.yoursaves {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 125px;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 999px;
 }
